# liveboard-rs

./: Cargo.toml  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  reset_db.sql  watch.sh
backend/sql/: get_shapes.sql
backend/src/: db.rs  main.rs  rest_handlers.rs  ws_handlers.rs
frontend/: Cargo.toml  index.html  watch.sh
frontend/src/: api.rs  live_cursor.rs  main.rs  routes.rs  utils.rs
frontend/src/components/: api_health_checker.rs  app.rs  board.rs  boards_list.rs  mod.rs  ws_client.rs  ws_tester.rs
shared/: Cargo.toml
shared/src/datatypes/: mod.rs
