[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-files = "0.6.0"
actix-web-actors = "4"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
simple_logger = "2.1.0"
log = "0.4.14"
shared = { path = "../shared" }
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }