[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-net = "0.2.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
shared = { path = "../shared" }
gloo-utils = "0.1"
futures = "0.3"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Location',
  'CanvasRenderingContext2d',
  'EventTarget',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlFormElement',
  'Window',
  'Crypto',
  'Performance',
  'Path2d',
]